[gd_scene load_steps=29 format=2]

[ext_resource path="res://environment/grass/animated_grass_0.png" type="Texture" id=1]
[ext_resource path="res://Grass.gd" type="Script" id=2]
[ext_resource path="res://environment/grass/animated_grass_3.png" type="Texture" id=3]
[ext_resource path="res://environment/grass/animated_grass_2.png" type="Texture" id=4]
[ext_resource path="res://environment/grass/animated_grass_1.png" type="Texture" id=5]
[ext_resource path="res://environment/grass/animated_grass_4.png" type="Texture" id=6]
[ext_resource path="res://environment/grass/grass_purple_flowers_0.png" type="Texture" id=7]
[ext_resource path="res://environment/grass/grass_purple_flowers_1.png" type="Texture" id=8]
[ext_resource path="res://environment/grass/grass_purple_flowers_4.png" type="Texture" id=9]
[ext_resource path="res://environment/grass/grass_purple_flowers_2.png" type="Texture" id=10]
[ext_resource path="res://environment/grass/grass_purple_flowers_3.png" type="Texture" id=11]
[ext_resource path="res://environment/grass/grass_yellow_flowers_1.png" type="Texture" id=12]
[ext_resource path="res://environment/grass/grass_yellow_flowers_2.png" type="Texture" id=13]
[ext_resource path="res://environment/grass/grass_yellow_flowers_4.png" type="Texture" id=14]
[ext_resource path="res://environment/grass/grass_yellow_flowers_0.png" type="Texture" id=15]
[ext_resource path="res://environment/grass/grass_yellow_flowers_3.png" type="Texture" id=16]
[ext_resource path="res://environment/grass/grass_red_flowers_0.png" type="Texture" id=17]
[ext_resource path="res://environment/grass/grass_red_flowers_1.png" type="Texture" id=18]
[ext_resource path="res://environment/grass/grass_red_flowers_2.png" type="Texture" id=19]
[ext_resource path="res://environment/grass/grass_red_flowers_4.png" type="Texture" id=20]
[ext_resource path="res://environment/grass/grass_red_flowers_3.png" type="Texture" id=21]
[ext_resource path="res://environment/grass/grass_blue_flowers_1.png" type="Texture" id=22]
[ext_resource path="res://environment/grass/grass_blue_flowers_0.png" type="Texture" id=23]
[ext_resource path="res://environment/grass/grass_blue_flowers_4.png" type="Texture" id=24]
[ext_resource path="res://environment/grass/grass_blue_flowers_3.png" type="Texture" id=25]
[ext_resource path="res://environment/grass/grass_blue_flowers_2.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": false,
"name": "Wave",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "WavePurple",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "IdlePurple",
"speed": 0.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": false,
"name": "IdleYellow",
"speed": 0.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "WaveYellow",
"speed": 7.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": false,
"name": "IdleBlue",
"speed": 0.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": false,
"name": "WaveBlue",
"speed": 7.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "IdleRed",
"speed": 0.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 17 ) ],
"loop": false,
"name": "WaveRed",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.38442, 2.53486 )

[node name="Grass" type="Area2D"]
collision_layer = 64
collision_mask = 3
script = ExtResource( 2 )

[node name="Grass_Anim" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "WaveBlue"

[node name="Grass_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.184025, 5.33672 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Grass_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Grass_body_exited"]
[connection signal="animation_finished" from="Grass_Anim" to="." method="_on_Grass_Anim_animation_finished"]
